testsuite/tests/annotations/should_fail/annfail10.stderr

annfail10.hs:9:1: error:
    No instance for (Data a0) arising from an annotation
    The type variable ‘a0’ is ambiguous
    Potential instances:
      instance (Data a, Data b) => Data (Either a b)
        -- Defined in ‘Data.Data’
      instance Data All -- Defined in ‘Data.Data’
      instance (Data (f a), Data a, Typeable f) => Data (Alt f a)
        -- Defined in ‘Data.Data’
      ...plus 39 others
      (use -fprint-potential-instances to see them all)
    In the annotation: {-# ANN f 1 #-}

annfail10.hs:9:11: error:
    No instance for (Num a0) arising from the literal ‘1’
    The type variable ‘a0’ is ambiguous
    Potential instances:
      instance forall (k :: BOX) (f :: k -> *) (a :: k).
               Num (f a) =>
               Num (Alt f a)
        -- Defined in ‘Data.Monoid’
      instance Num a => Num (Product a) -- Defined in ‘Data.Monoid’
      instance Num a => Num (Sum a) -- Defined in ‘Data.Monoid’
      ...plus 14 others
      (use -fprint-potential-instances to see them all)
    In the annotation: {-# ANN f 1 #-}
